@@ -1,3 +1,10 @@
+2008-03-17 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b121
+
+ * Fix: "view comments" should not be an option in thumbs view.
+        If its an option anywhere, it must not be a popup.
+
+   Thanks to 'plug' from forum.
+
 2008-02-02 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b120
 
  * Change: Mostly code nicify, little wording etc.
